[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable high optimizations for depencencies, but not for the main crate.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# TODO: Remove dynamic_linking when ready for release.
bevy = { version = "0.12.1", features = ["wav"] }
pkg-config = "0.3.28"
